<resources>
    <string name="app_name">V2Ray</string>
    <string name="notification_content_title">V2Ray Is Running</string>
    <string name="notification_content_text">Using config: %1$s</string>
    <string name="notification_action_stop_v2ray">Stop V2Ray</string>
    <string name="title_pref_server_address">Server address</string>
    <string name="title_pref_server_port">Server port</string>
    <string name="title_pref_user_id">ID</string>
    <string name="title_pref_user_alter_id">Alter ID</string>
    <string name="title_pref_server">Server Settings</string>
    <string name="title_pref_user">User Settings</string>
    <string name="title_pref_user_email">Email</string>
    <string name="title_pref_stream">Stream Settings</string>
    <string name="pref_stream_network_entries_tcp" translatable="false">TCP</string>
    <string name="pref_stream_network_entries_kcp" translatable="false">KCP</string>
    <string name="title_pref_stream_network">Network protocol</string>
    <string name="menu_item_add_config">Add config</string>
    <string name="title_file_chooser">Select a File to Import</string>
    <string name="toast_require_file_manager">Please install a File Manager.</string>
    <string name="title_dialog_convert_config">Convert Config File</string>
    <string name="msg_dialog_convert_config">The config file doesn\'t compatible with V2ray for Android, click \"OK\" to convert.</string>
    <string name="toast_config_file_invalid">Config file invalid.</string>
    <string name="title_dialog_input_config_name">Please Input Config Name</string>
    <string name="main_ad_unit_id">ca-app-pub-2250118750843932/1169751601</string>
</resources>
