<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/title_pref_server">
        <EditTextPreference
            android:defaultValue="v2ray.cool"
            android:key="pref_server_address"
            android:title="@string/title_pref_server_address" />

        <EditTextPreference
            android:defaultValue="10086"
            android:inputType="number"
            android:key="pref_server_port"
            android:title="@string/title_pref_server_port" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_pref_user">
        <EditTextPreference
            android:defaultValue="23ad6b10-8d1a-40f7-8ad0-e3e35cd38297"
            android:key="pref_user_id"
            android:title="@string/title_pref_user_id" />

        <EditTextPreference
            android:defaultValue="64"
            android:inputType="number"
            android:key="pref_user_alter_id"
            android:title="@string/title_pref_user_alter_id" />

        <EditTextPreference
            android:defaultValue=""
            android:inputType="textEmailAddress"
            android:key="pref_user_email"
            android:title="@string/title_pref_user_email" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_pref_stream">
        <ListPreference
            android:defaultValue="tcp"
            android:entries="@array/pref_stream_network_entries"
            android:entryValues="@array/pref_stream_network_values"
            android:key="pref_stream_network"
            android:title="@string/title_pref_stream_network" />
    </PreferenceCategory>

</PreferenceScreen>